--- a/.env
+++ b/.env
@@ -2,11 +2,11 @@
 # PostgreSQL DATABASE Config for TypeORM 
 #
 TYPEORM_CONNECTION=mysql
-TYPEORM_HOST=chatdata.cuoc0exgopvr.us-east-2.rds.amazonaws.com
+TYPEORM_HOST=localhost
 TYPEORM_PORT=3306
-TYPEORM_DATABASE=virtualchatdata
-TYPEORM_USERNAME=admin
-TYPEORM_PASSWORD=fsdRg736Dfggg
+TYPEORM_DATABASE=chatdata
+TYPEORM_USERNAME=root
+TYPEORM_PASSWORD=Garry000+
 TYPEORM_LOGGING=false
 TYPEORM_SYNCHRONIZE=false
 TYPEORM_MIGRATIONS_RUN=true
