--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "path": "0.12.7",
+    "pg-connection-string": "^2.4.0",
     "typeorm": "^0.2.29"
   },
   "devDependencies": {}
